HelloUltraviolet/Fixtures/RejectedSource/DataTypes/TypeAliasCycle/Expected.uv
//! Expected diagnostic metadata for the TypeAliasCycle rejected-source specimen.

expectedDiagnostic("E-TYP-1506", "def.AliasCycle")
expectedDiagnostic("E-TYP-1506", "TypeAlias-Recursive-Err")
expectedDiagnostic("E-TYP-1506", "req.TypeAliasDiagnosticOwnership")
expectedDiagnostic("E-TYP-1506", "diagnostics.CoreTypeDiagnostics")
